// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object-based items match the snapshot 1`] = `
<div
  className="rta  my-rta-container"
  style={
    Object {
      "background": "orange",
    }
  }
>
  <textarea
    className="rta__textarea my-rta"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onScroll={[Function]}
    onSelect={[Function]}
    placeholder="Write a message."
    style={
      Object {
        "background": "red",
      }
    }
    value="Controlled text"
  />
</div>
`;

exports[`object-based items match the snapshot of dropdown, list, and item 1`] = `
<div
  class="rta__autocomplete "
  style="top: 0px;"
>
  <ul
    class="rta__list my-rta-list"
  >
    <li
      class="rta__item my-rta-item"
      style="background: green;"
    >
      <div
        class="rta__entity rta__entity--selected"
        role="button"
        tabindex="0"
      >
        <div>
           
          :)
           
        </div>
      </div>
    </li>
    <li
      class="rta__item my-rta-item"
      style="background: green;"
    >
      <div
        class="rta__entity "
        role="button"
        tabindex="0"
      >
        <div>
           
          :(
           
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`object-based items match the snapshot of dropdown, list, and item 2`] = `
<ul
  class="rta__list my-rta-list"
>
  <li
    class="rta__item my-rta-item"
    style="background: green;"
  >
    <div
      class="rta__entity rta__entity--selected"
      role="button"
      tabindex="0"
    >
      <div>
         
        :)
         
      </div>
    </div>
  </li>
  <li
    class="rta__item my-rta-item"
    style="background: green;"
  >
    <div
      class="rta__entity "
      role="button"
      tabindex="0"
    >
      <div>
         
        :(
         
      </div>
    </div>
  </li>
</ul>
`;

exports[`object-based items match the snapshot of dropdown, list, and item 3`] = `
<li
  class="rta__item my-rta-item"
  style="background: green;"
>
  <div
    class="rta__entity rta__entity--selected"
    role="button"
    tabindex="0"
  >
    <div>
       
      :)
       
    </div>
  </div>
</li>
`;

exports[`object-based items with keys match the snapshot 1`] = `
<div
  className="rta  my-rta-container"
  style={
    Object {
      "background": "orange",
    }
  }
>
  <textarea
    className="rta__textarea my-rta"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onScroll={[Function]}
    onSelect={[Function]}
    placeholder="Write a message."
    style={
      Object {
        "background": "red",
      }
    }
    value="Controlled text"
  />
</div>
`;

exports[`object-based items with keys match the snapshot of dropdown, list, and item 1`] = `
<div
  class="rta__autocomplete "
  style="top: 0px;"
>
  <ul
    class="rta__list my-rta-list"
  >
    <li
      class="rta__item my-rta-item"
      style="background: green;"
    >
      <div
        class="rta__entity rta__entity--selected"
        role="button"
        tabindex="0"
      >
        <div>
           
          :)
           
        </div>
      </div>
    </li>
    <li
      class="rta__item my-rta-item"
      style="background: green;"
    >
      <div
        class="rta__entity "
        role="button"
        tabindex="0"
      >
        <div>
           
          :(
           
        </div>
      </div>
    </li>
    <li
      class="rta__item my-rta-item"
      style="background: green;"
    >
      <div
        class="rta__entity "
        role="button"
        tabindex="0"
      >
        <div>
           
          :|
           
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`object-based items with keys match the snapshot of dropdown, list, and item 2`] = `
<ul
  class="rta__list my-rta-list"
>
  <li
    class="rta__item my-rta-item"
    style="background: green;"
  >
    <div
      class="rta__entity rta__entity--selected"
      role="button"
      tabindex="0"
    >
      <div>
         
        :)
         
      </div>
    </div>
  </li>
  <li
    class="rta__item my-rta-item"
    style="background: green;"
  >
    <div
      class="rta__entity "
      role="button"
      tabindex="0"
    >
      <div>
         
        :(
         
      </div>
    </div>
  </li>
  <li
    class="rta__item my-rta-item"
    style="background: green;"
  >
    <div
      class="rta__entity "
      role="button"
      tabindex="0"
    >
      <div>
         
        :|
         
      </div>
    </div>
  </li>
</ul>
`;

exports[`object-based items with keys match the snapshot of dropdown, list, and item 3`] = `
<li
  class="rta__item my-rta-item"
  style="background: green;"
>
  <div
    class="rta__entity rta__entity--selected"
    role="button"
    tabindex="0"
  >
    <div>
       
      :)
       
    </div>
  </div>
</li>
`;

exports[`object-based items without keys and custom unique generator match the snapshot 1`] = `
<div
  className="rta  "
>
  <textarea
    className="rta__textarea "
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onScroll={[Function]}
    onSelect={[Function]}
    placeholder="Write a message."
    value="Controlled text"
  />
</div>
`;

exports[`string-based items w/o output fn match match the snapshot 1`] = `
<div
  className="rta  "
>
  <textarea
    className="rta__textarea ownClassName"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onScroll={[Function]}
    onSelect={[Function]}
    placeholder="Write a message."
    style={
      Object {
        "background": "red",
      }
    }
    value="Controlled text"
  />
</div>
`;

exports[`string-based items with output fn match match the snapshot 1`] = `
<div
  className="rta  "
>
  <textarea
    className="rta__textarea ownClassName"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onScroll={[Function]}
    onSelect={[Function]}
    placeholder="Write a message."
    style={
      Object {
        "background": "red",
      }
    }
    value="Controlled text"
  />
</div>
`;
